fix spacing in canoeing

--- a/src/scss/partials/canoeing/_canoeing.scss
+++ b/src/scss/partials/canoeing/_canoeing.scss
@@ -3,6 +3,7 @@
 
     &-title{
         font-size: 40px;
+        margin-top: 25px;
         margin-bottom: 25px;
         font-family: $paytoneOne-font-family;
         color: $akka-dark-orange;
